--- a/cs/styles.css
+++ b/cs/styles.css
@@ -43,7 +43,7 @@
         font-size: 16px !important;
     }
 }
-.screen {
+/*.screen {
     display: none;
     width: 100%;
     height: 100%;
@@ -61,7 +61,7 @@
 }
 .screen.active {
     display: block;
-}
+}*/
 /*Nuevos estilos para la pantalla de records*/
 .records-controls {
     display: flex;
