--- a/cs/styles.css
+++ b/cs/styles.css
@@ -49,6 +49,16 @@
         font-size: 16px !important;
     }
 }
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+    z-index: 9999;
+}
 .screen {
     width: 100%;
     max-width: 600px;
