--- a/cs/styles.css
+++ b/cs/styles.css
@@ -7,6 +7,23 @@
         background: var(--background-light);
         box-shadow: var(--shadow-md);
     }
+    ////////////////////////////////////////////////////////////////////////////////////
+     #offlinePopup {
+      display: none; /* Ocultar inicialmente */
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 300px;
+      padding: 20px;
+      background-color: #f44336; /* Rojo para advertencia */
+      color: white;
+      text-align: center;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      z-index: 1000;
+    }
+    ///////////////////////////////////////////////////////////////////////////////////
     
     .dark-theme .toggle-btn {
         background: var(--background-dark);
