--- a/cs/styles.css
+++ b/cs/styles.css
@@ -9,19 +9,47 @@
     }
     ////////////////////////////////////////////////////////////////////////////////////
      #offlinePopup {
-      display: none; /* Ocultar inicialmente */
+      display: none; 
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       width: 300px;
       padding: 20px;
-      background-color: #f44336; /* Rojo para advertencia */
+      background-color: #f44336; 
       color: white;
       text-align: center;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       z-index: 1000;
+    }
+
+    .back-to-menu {
+      position: fixed;
+      bottom: 20px; 
+      left: 20px; 
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      cursor: pointer;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s;
+    }
+
+    .back-to-menu:hover {
+      background-color: #555; 
+    }
+
+    /* arrow */
+    .back-to-menu::after {
+      content: '←'; 
     }
     ///////////////////////////////////////////////////////////////////////////////////
     
