--- a/cs/styles.css
+++ b/cs/styles.css
@@ -17,7 +17,7 @@
       color: white;
     }
 
-    changeBtn {
+    .changeBtn {
         display: inline-block; 
         width: 200px; 
         height: 100px;
