--- a/cs/styles.css
+++ b/cs/styles.css
@@ -16,7 +16,7 @@
     }
 
     .changeBtn {
-        display: inline-block;
+        position: fixed; 
         right: 0;
         width: 200px; 
         height: 100px;
