--- a/cs/styles.css
+++ b/cs/styles.css
@@ -18,8 +18,10 @@
     .changeBtn {
         position: fixed; 
         right: 0;
-        width: 200px; 
-        height: 100px;
+       /* width: 260px; 
+        height: 5px;*/
+        top: 50%;
+        left: 50%;
     }
         
    
