--- a/cs/styles.css
+++ b/cs/styles.css
@@ -19,10 +19,10 @@
         position: absolute; 
         display: flex;
         right: 0;
-        width: 260px; 
-        height: 5px;
-       /* top: 50%;
-        left: 50%;*/
+        /* width: 260px; 
+        height: 5px;*/
+        top: 50%;
+        left: 50%;
     }
         
    
