--- a/cs/styles.css
+++ b/cs/styles.css
@@ -40,9 +40,9 @@
     }
 
     .back-to-menu {
-      position: fixed;
+     /* position: fixed;
       bottom: 20px; 
-      left: 20px; 
+      left: 20px; */
       background-color: #333;
       color: white;
       border: none;
