--- a/cs/styles.css
+++ b/cs/styles.css
@@ -17,7 +17,7 @@
 
     .changeBtn {
         position: absolute; 
-        top: 1%;
+        top: 3%;
         left: 60%;
     }
         
@@ -41,8 +41,8 @@
 
     .back-to-menu {
      /* position: fixed;
-      bottom: 20px; 
-      left: 20px; */
+      bottom: 20px; */
+      left: 10%; 
       background-color: #333;
       color: white;
       border: none;
