--- a/cs/styles.css
+++ b/cs/styles.css
@@ -17,7 +17,7 @@
 
     .changeBtn {
         position: absolute; 
-        top: 3%;
+        top: 1%;
         left: 60%;
     }
         
@@ -40,10 +40,10 @@
     }
 
     .back-to-menu {
-     /* position: fixed;
-      bottom: 20px; */
-      position: absolute; 
+      position: fixed;
+      bottom: 20px; 
       left: 10%; 
+      top: 10;
       background-color: #333;
       color: white;
       border: none;
