--- a/cs/styles.css
+++ b/cs/styles.css
@@ -43,7 +43,7 @@
       position: fixed;
       bottom: 20px; 
       left: 15%; 
-      top: 1;
+      top: 1%;
       background-color: #333;
       color: white;
       border: none;
