--- a/cs/styles.css
+++ b/cs/styles.css
@@ -20,7 +20,10 @@
         top: 2%;
         left: 63%;
     }
-        
+
+    adminScreen {
+        overflow-y: auto;
+    }
    
    /* /////////////////////////////////////////////////////////////////////////  */ 
      #offlinePopup {
