--- a/cs/styles.css
+++ b/cs/styles.css
@@ -77,7 +77,7 @@
     }
     
     .screen.active {
-        padding-top: 120px; /* Make room for the floating buttons */
+        padding-block:0% 20%
     }
      .admin-header {
         margin-left: 50px;
@@ -667,15 +667,15 @@ body {
 /* Container Layouts */
 .admin-container {
     width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 0 0;
     padding: var(--spacing-md);
     min-height: 100vh;
-    padding-bottom: 120px;
-    overflow-y: auto;
+    padding-bottom: 0%;
+    overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
-    height: 100vh;
-    position: relative;
+    height: 100%;
+    position: fixed;
 }
 .container {
     width: 100%;
@@ -695,7 +695,7 @@ body {
     padding: var(--spacing-lg);
     box-shadow: var(--shadow-lg);
     position: relative;
-    margin: 0% 0;
+    margin: 5% 0;
     right: 0%;
 }
 
