--- a/cs/styles.css
+++ b/cs/styles.css
@@ -239,9 +239,9 @@
         display: none;
     }
     .admin-header .btn-secondary {
-        position: fixed;
-        top: 20px;
-        right: 20px;
+        position: absolute;
+        top: 160px;
+        right: 2px;
         width: auto;
         z-index: 1000;
     }
@@ -731,7 +731,7 @@ textarea {
 }
 
 .record-status {
-    padding: 2px 8px;
+    padding: 1%;
     border-radius: 4px;
     font-size: 12px;
 }
@@ -866,8 +866,8 @@ body {
 
 /* Buttons */
 .btn {
-    min-height: 48px;
-    padding: 12px 20px;
+    min-height: 30px;
+    padding: 0%;
     font-size: 16px;
     font-weight: 600;
     color: #ffffff;
@@ -1128,6 +1128,22 @@ th, td {
         margin: 5% auto;
         width: 95%;
     }
+    //////////////////////////////////////////////////////////////////////////
+    .close-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    color: #333;
+    cursor: pointer;
+    font-weight: bold;
+    transition: color 0.2s ease;
+}
+    .close-modal:hover {
+    color: #ff0000;
+}
+
+
     
     .sidebar {
         width: 100%;
